新增rwd並且有重新建置的狀態

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yangyangmed",
   "version": "0.0.0",
   "private": true,
-  "homepage":"https://jerryshen26.github.io/yangyangmed/",
+  "homepage": "https://jerryshen26.github.io/yangyangmed.com/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gh-pages": "^5.0.0",
+    "vite-plugin-sitemap": "^0.3.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
